# rinha-backend-q1

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql  nginx.conf  postgresql.conf
src/: db.rs  main.rs  structs.rs
